--- a/index.ipynb
+++ b/index.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -92,97 +92,130 @@
        "      <th>acceleration</th>\n",
        "      <th>model year</th>\n",
        "      <th>origin</th>\n",
-       "      <th>car name</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>18.0</td>\n",
-       "      <td>8</td>\n",
-       "      <td>307.0</td>\n",
-       "      <td>130</td>\n",
-       "      <td>3504</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>70</td>\n",
-       "      <td>1</td>\n",
-       "      <td>chevrolet chevelle malibu</td>\n",
+       "      <th>count</th>\n",
+       "      <td>392.000000</td>\n",
+       "      <td>392.000000</td>\n",
+       "      <td>392.000000</td>\n",
+       "      <td>392.000000</td>\n",
+       "      <td>392.000000</td>\n",
+       "      <td>392.000000</td>\n",
+       "      <td>392.000000</td>\n",
+       "      <td>392.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>15.0</td>\n",
-       "      <td>8</td>\n",
-       "      <td>350.0</td>\n",
-       "      <td>165</td>\n",
-       "      <td>3693</td>\n",
-       "      <td>11.5</td>\n",
-       "      <td>70</td>\n",
-       "      <td>1</td>\n",
-       "      <td>buick skylark 320</td>\n",
+       "      <th>mean</th>\n",
+       "      <td>23.445918</td>\n",
+       "      <td>5.471939</td>\n",
+       "      <td>194.411990</td>\n",
+       "      <td>104.469388</td>\n",
+       "      <td>2977.584184</td>\n",
+       "      <td>15.541327</td>\n",
+       "      <td>75.979592</td>\n",
+       "      <td>1.576531</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>18.0</td>\n",
-       "      <td>8</td>\n",
-       "      <td>318.0</td>\n",
-       "      <td>150</td>\n",
-       "      <td>3436</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>70</td>\n",
-       "      <td>1</td>\n",
-       "      <td>plymouth satellite</td>\n",
+       "      <th>std</th>\n",
+       "      <td>7.805007</td>\n",
+       "      <td>1.705783</td>\n",
+       "      <td>104.644004</td>\n",
+       "      <td>38.491160</td>\n",
+       "      <td>849.402560</td>\n",
+       "      <td>2.758864</td>\n",
+       "      <td>3.683737</td>\n",
+       "      <td>0.805518</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>16.0</td>\n",
-       "      <td>8</td>\n",
-       "      <td>304.0</td>\n",
-       "      <td>150</td>\n",
-       "      <td>3433</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>70</td>\n",
-       "      <td>1</td>\n",
-       "      <td>amc rebel sst</td>\n",
+       "      <th>min</th>\n",
+       "      <td>9.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>68.000000</td>\n",
+       "      <td>46.000000</td>\n",
+       "      <td>1613.000000</td>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>70.000000</td>\n",
+       "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>17.0</td>\n",
-       "      <td>8</td>\n",
-       "      <td>302.0</td>\n",
-       "      <td>140</td>\n",
-       "      <td>3449</td>\n",
-       "      <td>10.5</td>\n",
-       "      <td>70</td>\n",
-       "      <td>1</td>\n",
-       "      <td>ford torino</td>\n",
+       "      <th>25%</th>\n",
+       "      <td>17.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>105.000000</td>\n",
+       "      <td>75.000000</td>\n",
+       "      <td>2225.250000</td>\n",
+       "      <td>13.775000</td>\n",
+       "      <td>73.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>22.750000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>151.000000</td>\n",
+       "      <td>93.500000</td>\n",
+       "      <td>2803.500000</td>\n",
+       "      <td>15.500000</td>\n",
+       "      <td>76.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>29.000000</td>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>275.750000</td>\n",
+       "      <td>126.000000</td>\n",
+       "      <td>3614.750000</td>\n",
+       "      <td>17.025000</td>\n",
+       "      <td>79.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>46.600000</td>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>455.000000</td>\n",
+       "      <td>230.000000</td>\n",
+       "      <td>5140.000000</td>\n",
+       "      <td>24.800000</td>\n",
+       "      <td>82.000000</td>\n",
+       "      <td>3.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    mpg  cylinders  displacement  horsepower  weight  acceleration  \\\n",
-       "0  18.0          8         307.0         130    3504          12.0   \n",
-       "1  15.0          8         350.0         165    3693          11.5   \n",
-       "2  18.0          8         318.0         150    3436          11.0   \n",
-       "3  16.0          8         304.0         150    3433          12.0   \n",
-       "4  17.0          8         302.0         140    3449          10.5   \n",
+       "              mpg   cylinders  displacement  horsepower       weight  \\\n",
+       "count  392.000000  392.000000    392.000000  392.000000   392.000000   \n",
+       "mean    23.445918    5.471939    194.411990  104.469388  2977.584184   \n",
+       "std      7.805007    1.705783    104.644004   38.491160   849.402560   \n",
+       "min      9.000000    3.000000     68.000000   46.000000  1613.000000   \n",
+       "25%     17.000000    4.000000    105.000000   75.000000  2225.250000   \n",
+       "50%     22.750000    4.000000    151.000000   93.500000  2803.500000   \n",
+       "75%     29.000000    8.000000    275.750000  126.000000  3614.750000   \n",
+       "max     46.600000    8.000000    455.000000  230.000000  5140.000000   \n",
        "\n",
-       "   model year  origin                   car name  \n",
-       "0          70       1  chevrolet chevelle malibu  \n",
-       "1          70       1          buick skylark 320  \n",
-       "2          70       1         plymouth satellite  \n",
-       "3          70       1              amc rebel sst  \n",
-       "4          70       1                ford torino  "
+       "       acceleration  model year      origin  \n",
+       "count    392.000000  392.000000  392.000000  \n",
+       "mean      15.541327   75.979592    1.576531  \n",
+       "std        2.758864    3.683737    0.805518  \n",
+       "min        8.000000   70.000000    1.000000  \n",
+       "25%       13.775000   73.000000    1.000000  \n",
+       "50%       15.500000   76.000000    1.000000  \n",
+       "75%       17.025000   79.000000    2.000000  \n",
+       "max       24.800000   82.000000    3.000000  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data.describ"
+    "data.describe()"
    ]
   },
   {
