--- a/index.ipynb
+++ b/index.ipynb
@@ -60,32 +60,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 392 entries, 0 to 391\n",
-      "Data columns (total 9 columns):\n",
-      "mpg             392 non-null float64\n",
-      "cylinders       392 non-null int64\n",
-      "displacement    392 non-null float64\n",
-      "horsepower      392 non-null int64\n",
-      "weight          392 non-null int64\n",
-      "acceleration    392 non-null float64\n",
-      "model year      392 non-null int64\n",
-      "origin          392 non-null int64\n",
-      "car name        392 non-null object\n",
-      "dtypes: float64(3), int64(5), object(1)\n",
-      "memory usage: 27.6+ KB\n"
-     ]
+     "data": {
+      "text/plain": [
+       "150    22\n",
+       "90     20\n",
+       "88     19\n",
+       "110    18\n",
+       "100    17\n",
+       "95     14\n",
+       "75     14\n",
+       "105    12\n",
+       "67     12\n",
+       "70     12\n",
+       "65     10\n",
+       "85      9\n",
+       "97      9\n",
+       "80      7\n",
+       "145     7\n",
+       "140     7\n",
+       "72      6\n",
+       "68      6\n",
+       "78      6\n",
+       "92      6\n",
+       "84      6\n",
+       "60      5\n",
+       "170     5\n",
+       "175     5\n",
+       "180     5\n",
+       "115     5\n",
+       "71      5\n",
+       "86      5\n",
+       "130     5\n",
+       "76      4\n",
+       "       ..\n",
+       "66      1\n",
+       "230     1\n",
+       "82      1\n",
+       "89      1\n",
+       "220     1\n",
+       "210     1\n",
+       "208     1\n",
+       "200     1\n",
+       "193     1\n",
+       "167     1\n",
+       "158     1\n",
+       "152     1\n",
+       "149     1\n",
+       "148     1\n",
+       "142     1\n",
+       "138     1\n",
+       "137     1\n",
+       "135     1\n",
+       "133     1\n",
+       "132     1\n",
+       "122     1\n",
+       "116     1\n",
+       "113     1\n",
+       "108     1\n",
+       "107     1\n",
+       "103     1\n",
+       "94      1\n",
+       "93      1\n",
+       "91      1\n",
+       "102     1\n",
+       "Name: horsepower, Length: 93, dtype: int64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "data.info()"
+    "data.horsepower.value_counts()"
    ]
   },
   {
